# template-creator-hub

./: .env  index.html  package-lock.json  package.json  tailwind.config.ts
contracts/rift-mixer/: Anchor.toml  Cargo.toml  README.md
contracts/rift-mixer/programs/rift-governance/src/: lib.rs
contracts/rift-mixer/programs/rift-mixer/src/: lib.rs
contracts/rift-mixer/programs/rift-staking/src/: lib.rs
docs/: INTEGRATION_PLAN.md  WHITEPAPER.md
src/: App.tsx  index.css  main.tsx
src/components/home/: FeatureCard.tsx  FeatureGrid.tsx  Hero.tsx  HeroContent.tsx  HowItWorks.tsx
src/components/layout/: Footer.tsx  Header.tsx  VideoBackground.tsx
src/components/mixer/: AmountSelector.tsx  DepositForm.tsx  PoolSelector.tsx  PoolStats.tsx  WithdrawForm.tsx  index.ts
src/components/staking/: ActiveStakes.tsx  AmountInput.tsx  LockupCountdown.tsx  QRCodePayment.tsx  RealtimeRewardsCounter.tsx  StakeForm.tsx  StakeStats.tsx  StakeSuccess.tsx  index.ts
src/components/wallet/: WalletButton.tsx  WalletContextProvider.tsx  index.ts
src/hooks/: useStaking.ts  useUmbraClient.ts  useWalletConnection.ts  useWalletVerification.ts
src/integrations/supabase/: types.ts
src/lib/protocol/: constants.ts  types.ts
src/lib/staking/: types.ts
src/lib/umbra/: client.ts  types.ts
src/pages/: Home.tsx  Mixer.tsx  Protocol.tsx  Staking.tsx  Stats.tsx
supabase/: config.toml
supabase/migrations/: 20260114121229_4163857e-4f61-48a5-81d0-dfffb1af578a.sql  20260123102950_b2c9f44a-c448-4590-87cc-e69fedcde2ad.sql  20260124084812_c636df18-de00-4c70-975f-be3a19b2cceb.sql
(+6 files in other folders)
