[package]
name = "rift-mixer"
version = "0.1.0"
description = "RIFT Privacy Mixer - Zero-knowledge privacy protocol for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rift_mixer"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"

[dev-dependencies]
anchor-client = "0.29.0"
